--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,12 +4,42 @@ httpx
 python-dotenv
 fastapi==0.110.0
 uvicorn[standard]==0.29.0
-pydantic==2.6.4
+pydantic==2.11.2
 httpx==0.27.0  # Only if you use it in llm_client.py
 pandas
 python-multipart
 openpyxl==3.1.2
 langgraph
 langchain
-langchain-core
+# langchain-core
 langchain-groq
+faiss-cpu
+sentence-transformers
+ipykernel
+langchain-community
+chromadb
+
+
+# # Essentials
+# fastapi==0.110.0
+# uvicorn[standard]==0.29.0
+# httpx==0.27.0
+# pandas
+# python-dotenv
+# python-multipart
+# openpyxl==3.1.2
+# pydantic>=2.7.0
+
+# # Langchain ecosystem (aligned)
+# langchain==0.2.17
+# langchain-core==0.2.43
+# langchain-community==0.2.19
+# langchain-groq==0.1.10
+# langchain[faiss]
+
+# # RAG support
+# faiss-cpu
+# chromadb
+
+# # ✅ Updated LangGraph version
+# langgraph==0.0.65
